--- a/World Happiness Report 2020-2021.ipynb
+++ b/World Happiness Report 2020-2021.ipynb
@@ -4,6 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "by : Dyah Ayu Kusuma Wardhani\n",
+    "\n",
     "\n",
     "<h1 align=\"center\"><font size=\"7\"><strong>World Happiness Report 2020-2021</strong></font></h1>\n",
     "\n",
@@ -1029,9 +1031,9 @@
     "Berdasarkan visualisasi heatmap diatas, terdapat beberapa kolom yang memiliki korelasi cukup tinggi dengan kolom \n",
     "`Ladder score`. Kolom tersebut diantaranya adalah sebagai \n",
     "berikut:\n",
-    "1. `Healthy life expectancy\t`, dengan korelasi sebesar 0.91\n",
+    "1. `Healthy life expectancy`, dengan korelasi sebesar 0.91\n",
     "2. `Logged GDP per capita`, dengan korelasi sebesar 0.90\n",
-    "3. `Social support\t`, dengan korelasi sebesar 0.89\n",
+    "3. `Social support`, dengan korelasi sebesar 0.89\n",
     "4. `Freedom to make life choices`, dengan korelasi sebesar 0.79\n",
     "5. `Perceptions of corruption`, dengan korelasi sebesar -0.817"
    ]
